--- a/app/sass/base/icons.scss
+++ b/app/sass/base/icons.scss
@@ -1,62 +1,62 @@
 @font-face {
-    font-family: 'horizon-boilerplate-icon-font', sans-serif;
-    src: url('../fonts/icons/horizon-boilerplate-icon-font.woff2') format('woff2'),
-        url('../fonts/icons/horizon-boilerplate-icon-font.woff') format('woff');
+	font-family: "horizon-boilerplate-icon-font", sans-serif;
+	src: url('../fonts/icons/horizon-boilerplate-icon-font.woff2') format('woff2'),
+		url('../fonts/icons/horizon-boilerplate-icon-font.woff') format('woff')
 }
 
 .icon {
-    font-family: 'horizon-boilerplate-icon-font', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: normal;
-    text-decoration: none;
-    text-transform: none;
+	font-family: "horizon-boilerplate-icon-font", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: normal;
+	text-decoration: none;
+	text-transform: none;
 }
 
 @function icon-char($filename) {
-    $char: '';
+	$char: "";
 
-    @if $filename == chevron-down {
-        $char: '\E001';
-    }
-    @if $filename == chevron-left {
-        $char: '\E002';
-    }
-    @if $filename == chevron-right {
-        $char: '\E003';
-    }
-    @if $filename == chevron-up {
-        $char: '\E004';
-    }
+	@if $filename == chevron-down {
+		$char: "\E001";
+	}
+	@if $filename == chevron-left {
+		$char: "\E002";
+	}
+	@if $filename == chevron-right {
+		$char: "\E003";
+	}
+	@if $filename == chevron-up {
+		$char: "\E004";
+	}
 
-    @return $char;
+	@return $char;
 }
 
 @mixin icon($filename, $insert: before, $extend: true) {
-    &:#{$insert} {
-        @if $extend {
-            @extend .icon;
-        } @else {
-            @include icon-styles;
-        }
-        content: icon-char($filename);
-    }
+	&:#{$insert} {
+		@if $extend {
+			@extend .icon;
+		} @else {
+			@include icon-styles;
+		}
+		content: icon-char($filename);
+	}
 }
 
 .icon-chevron-down {
-    @include icon(chevron-down);
+	@include icon(chevron-down);
 }
 
 .icon-chevron-left {
-    @include icon(chevron-left);
+	@include icon(chevron-left);
 }
 
 .icon-chevron-right {
-    @include icon(chevron-right);
+	@include icon(chevron-right);
 }
 
 .icon-chevron-up {
-    @include icon(chevron-up);
+	@include icon(chevron-up);
 }
